bin_PROGRAMS = dummybd membd loopbd

dummybd_SOURCES = dummybd.c
dummybd_LDADD = ../lib/libbdtun.lo ../lib/libbdtun_backend.lo

membd_SOURCES = membd.c
membd_LDADD = ../lib/libbdtun.lo ../lib/libbdtun_backend.lo

loopbd_SOURCES = loopbd.c
loopbd_LDADD = ../lib/libbdtun.lo ../lib/libbdtun_backend.lo
